# CryptographyTools

./: SplitDataXOR.c
splinch_c/src/: splinch.c
splinch_rs/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
splinch_rs/src/: lib.rs  main.rs
